# verification

./: .gitignore  README.md  pyproject.toml
configs/: fsdp_2gpu.yaml  fsdp_4gpu.yaml  fsdp_8gpu.yaml
scripts/: calc_latency.py  compute_estimates.ipynb  decontaminate.ipynb  eval_and_plot.ipynb  gen_trajectories.py  precompute_equiv_matrix.py  run_judge_hf.py  train_ranking.py  train_val_split.ipynb
verification/: metrics.py  utils.py
verification/rollout/: distributed.py  models.py  preprocess.py
verification/training/: ranking.py
verification/training/qwen_utils/: configuration_qwen2_rm.py  modeling_qwen2_rm.py
